--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     .controls-grid {
       display: grid;
       gap: 12px;
-      grid-template-columns: repeat(2, minmax(0, 1fr));
+      grid-template-columns: repeat(3, minmax(0, 1fr));
     }
 
     h1 {
@@ -349,6 +349,12 @@
       .key {
         padding: 14px 6px;
         font-size: 14px;
+      }
+    }
+
+    @media (max-width: 1200px) {
+      .controls-grid {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
       }
     }
   </style>
