--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     .controls-grid {
       display: grid;
       gap: 12px;
-      grid-template-columns: repeat(4, minmax(0, 1fr));
+      grid-template-columns: repeat(3, minmax(0, 1fr));
     }
 
     h1 {
@@ -671,6 +671,9 @@
     let currentSource = "audio";
     let midiMode = "auto";
     let midiSynthGain = null;
+    let midiSynthFilter = null;
+    let midiSynthComp = null;
+    let midiNoiseBuffer = null;
     let midiSynthNodes = [];
 
     let ctx;
@@ -1020,6 +1023,19 @@
       midiSynthNodes = [];
     }
 
+    function getMidiNoiseBuffer(audioCtx) {
+      if (midiNoiseBuffer && midiNoiseBuffer.sampleRate === audioCtx.sampleRate) return midiNoiseBuffer;
+      const dur = 0.14;
+      const length = Math.floor(audioCtx.sampleRate * dur);
+      const buffer = audioCtx.createBuffer(1, length, audioCtx.sampleRate);
+      const data = buffer.getChannelData(0);
+      for (let i = 0; i < length; i += 1) {
+        data[i] = (Math.random() * 2 - 1) * (1 - i / length);
+      }
+      midiNoiseBuffer = buffer;
+      return buffer;
+    }
+
     function reduceOnsetsForSynth(onsets, maxNotes = 500) {
       if (!onsets || onsets.length <= maxNotes) return onsets;
       const sorted = onsets.slice().sort((a, b) => a.t - b.t);
@@ -1030,7 +1046,9 @@
         const t0 = sorted[i].t;
         let best = sorted[i];
         while (i < sorted.length && sorted[i].t - t0 <= groupWindow) {
-          if (sorted[i].vel > best.vel) best = sorted[i];
+          const curV = sorted[i].v ?? sorted[i].vel ?? 0;
+          const bestV = best.v ?? best.vel ?? 0;
+          if (curV > bestV) best = sorted[i];
           i += 1;
         }
         reduced.push(best);
@@ -1043,30 +1061,96 @@
     function scheduleMidiSynth(onsets, bpm) {
       if (!onsets || !onsets.length) return;
       const audioCtx = ensureAudioContext();
+      if (audioCtx.state === "suspended") {
+        audioCtx.resume().catch(() => {});
+      }
       if (!midiSynthGain) {
         midiSynthGain = audioCtx.createGain();
-        midiSynthGain.gain.value = 0.12;
-        midiSynthGain.connect(audioCtx.destination);
+        midiSynthGain.gain.value = 0.38;
+        midiSynthFilter = audioCtx.createBiquadFilter();
+        midiSynthFilter.type = "lowpass";
+        midiSynthFilter.frequency.value = 12000;
+        midiSynthFilter.Q.value = 0.3;
+        midiSynthComp = audioCtx.createDynamicsCompressor();
+        midiSynthComp.threshold.value = -18;
+        midiSynthComp.knee.value = 24;
+        midiSynthComp.ratio.value = 3.2;
+        midiSynthComp.attack.value = 0.003;
+        midiSynthComp.release.value = 0.18;
+        midiSynthGain.connect(midiSynthFilter);
+        midiSynthFilter.connect(midiSynthComp);
+        midiSynthComp.connect(audioCtx.destination);
       }
       stopMidiSynth();
       const now = audioCtx.currentTime;
       const offset = now - startTime;
-      const reduced = reduceOnsetsForSynth(onsets, 500);
+      const reduced = reduceOnsetsForSynth(onsets, 520);
+      const canPan = typeof audioCtx.createStereoPanner === "function";
       for (const o of reduced) {
-        const osc = audioCtx.createOscillator();
-        const gain = audioCtx.createGain();
         const freq = 440 * Math.pow(2, (o.note - 69) / 12);
-        osc.type = "triangle";
         const startAt = Math.max(audioCtx.currentTime + 0.01, now + o.t - offset);
-        osc.frequency.setValueAtTime(freq, startAt);
-        gain.gain.setValueAtTime(0.0001, startAt);
-        gain.gain.exponentialRampToValueAtTime(0.07, startAt + 0.02);
-        gain.gain.exponentialRampToValueAtTime(0.0001, startAt + 0.22);
-        osc.connect(gain);
-        gain.connect(midiSynthGain);
-        osc.start(startAt);
-        osc.stop(startAt + 0.26);
-        midiSynthNodes.push(osc);
+        const vel = Math.max(0.25, Math.min(1, o.v ?? 0.6));
+        const dur = o.ch === 9 ? 0.28 : 0.24;
+        const baseAmp = 0.035 + vel * 0.09;
+        const outGain = audioCtx.createGain();
+        outGain.gain.setValueAtTime(0.0001, startAt);
+        outGain.gain.exponentialRampToValueAtTime(baseAmp, startAt + 0.01);
+        outGain.gain.exponentialRampToValueAtTime(0.0001, startAt + dur);
+
+        if (canPan) {
+          const ch = o.ch ?? 0;
+          const pan = audioCtx.createStereoPanner();
+          const panVal = ((ch % 8) / 7) * 0.5 - 0.25;
+          pan.pan.setValueAtTime(panVal, startAt);
+          outGain.connect(pan);
+          pan.connect(midiSynthGain);
+        } else {
+          outGain.connect(midiSynthGain);
+        }
+
+        if (o.ch === 9) {
+          const noise = audioCtx.createBufferSource();
+          noise.buffer = getMidiNoiseBuffer(audioCtx);
+          const hp = audioCtx.createBiquadFilter();
+          hp.type = "highpass";
+          hp.frequency.value = 1200;
+          noise.connect(hp);
+          hp.connect(outGain);
+          noise.start(startAt);
+          noise.stop(startAt + 0.12);
+          midiSynthNodes.push(noise);
+          continue;
+        }
+
+        const osc1 = audioCtx.createOscillator();
+        const osc2 = audioCtx.createOscillator();
+        osc1.type = o.note > 76 ? "sawtooth" : "triangle";
+        osc2.type = "sine";
+        osc1.frequency.setValueAtTime(freq, startAt);
+        osc2.frequency.setValueAtTime(freq * 2, startAt);
+        osc2.detune.setValueAtTime(Math.random() * 8 - 4, startAt);
+        osc1.connect(outGain);
+        osc2.connect(outGain);
+        osc1.start(startAt);
+        osc2.start(startAt);
+        osc1.stop(startAt + dur);
+        osc2.stop(startAt + dur);
+        midiSynthNodes.push(osc1, osc2);
+
+        if (o.note < 50) {
+          const sub = audioCtx.createOscillator();
+          const subGain = audioCtx.createGain();
+          sub.type = "sine";
+          sub.frequency.setValueAtTime(freq / 2, startAt);
+          subGain.gain.setValueAtTime(0.0001, startAt);
+          subGain.gain.exponentialRampToValueAtTime(baseAmp * 0.45, startAt + 0.01);
+          subGain.gain.exponentialRampToValueAtTime(0.0001, startAt + dur);
+          sub.connect(subGain);
+          subGain.connect(outGain);
+          sub.start(startAt);
+          sub.stop(startAt + dur);
+          midiSynthNodes.push(sub);
+        }
       }
     }
 
@@ -1572,7 +1656,8 @@
       const onsets = noteOns.map((n) => ({
         t: tickToSec(n.tick),
         v: n.vel / 127,
-        note: n.note
+        note: n.note,
+        ch: n.ch
       }));
 
       const bpm = Math.round(60 * 1e6 / tempos[0].mpqn);
