Narrow and center gameplay panel

--- a/index.html
+++ b/index.html
@@ -265,6 +265,8 @@
     .game-wrap {
       display: grid;
       gap: 10px;
+      width: min(100%, 980px);
+      margin: 0 auto;
     }
 
     canvas {
