--- a/index.html
+++ b/index.html
@@ -748,8 +748,8 @@
     let keyLabel = "-";
     let keyBaseFreq = 1760;
     const particles = [];
-    const MAX_PARTICLES = 320;
-    const HEAVY_PARTICLE_THRESHOLD = 180;
+    const MAX_PARTICLES = 220;
+    const HEAVY_PARTICLE_THRESHOLD = 120;
     let activeHolds = [];
     const pressedKeys = new Set();
     let midiOnsets = null;
@@ -764,6 +764,7 @@
     let midiSynthComp = null;
     let midiNoiseBuffer = null;
     let holdReverbBuffer = null;
+    let holdSustainBus = null;
     let midiSynthNodes = [];
 
     let ctx;
@@ -1425,6 +1426,24 @@
       if (audioCtx.state === "suspended") {
         audioCtx.resume().catch(() => {});
       }
+      const ensureHoldSustainBus = () => {
+        if (holdSustainBus) return holdSustainBus;
+        const input = audioCtx.createGain();
+        const dry = audioCtx.createGain();
+        const wet = audioCtx.createGain();
+        const convolver = audioCtx.createConvolver();
+        if (!holdReverbBuffer) holdReverbBuffer = buildReverbImpulse(audioCtx, 0.9, 2.7);
+        convolver.buffer = holdReverbBuffer;
+        dry.gain.value = 0.44;
+        wet.gain.value = 0.56;
+        input.connect(dry);
+        input.connect(convolver);
+        convolver.connect(wet);
+        dry.connect(audioCtx.destination);
+        wet.connect(audioCtx.destination);
+        holdSustainBus = { input, dry, wet, convolver };
+        return holdSustainBus;
+      };
       const now = audioCtx.currentTime;
       // Keep hold timbre close to hit SFX: bright, high, bell-like.
       const laneOffsets = [0, 2, 5, 7, 9, 12, 14, 17];
@@ -1433,23 +1452,10 @@
       const output = audioCtx.createGain();
       output.gain.setValueAtTime(0.0001, now);
       output.gain.exponentialRampToValueAtTime(Math.max(0.002, 0.14 * sfxVolume), now + 0.05);
+      output.connect(ensureHoldSustainBus().input);
 
-      const dry = audioCtx.createGain();
-      const wet = audioCtx.createGain();
-      dry.gain.value = 0.38;
-      wet.gain.value = 0.95;
-      const convolver = audioCtx.createConvolver();
-      if (!holdReverbBuffer) holdReverbBuffer = buildReverbImpulse(audioCtx, 1.05, 3.0);
-      convolver.buffer = holdReverbBuffer;
-
-      output.connect(dry);
-      output.connect(convolver);
-      convolver.connect(wet);
-      dry.connect(audioCtx.destination);
-      wet.connect(audioCtx.destination);
-
-      const partials = [1, 2.1, 2.9, 4.1, 5.3];
-      const levels = [0.07, 0.05, 0.032, 0.022, 0.016];
+      const partials = [1, 2.1];
+      const levels = [0.068, 0.042];
       const oscs = [];
       const gains = [];
       for (let i = 0; i < partials.length; i += 1) {
@@ -1466,15 +1472,7 @@
         gains.push(g);
       }
 
-      const lfo = audioCtx.createOscillator();
-      const lfoGain = audioCtx.createGain();
-      lfo.type = "sine";
-      lfo.frequency.setValueAtTime(6.2, now);
-      lfoGain.gain.setValueAtTime(0.018 * Math.max(0.6, sfxVolume), now);
-      lfo.connect(lfoGain);
-      lfoGain.connect(output.gain);
-      lfo.start(now);
-      return { output, dry, wet, convolver, oscs, gains, lfo, lfoGain };
+      return { output, oscs, gains, lfo: null, lfoGain: null };
     }
 
     function stopHoldSustain(holdEntry) {
@@ -2466,7 +2464,7 @@
       grad.addColorStop(0, "rgba(255,255,255,0.24)");
       grad.addColorStop(0.24, color);
       grad.addColorStop(1, "rgba(170,188,206,0.9)");
-      g.shadowBlur = 12 * glow;
+      g.shadowBlur = 6 * glow;
       g.shadowColor = "rgba(236,244,255,0.42)";
       roundRectPath(g, x, y, w, h, 7);
       g.fillStyle = grad;
@@ -2560,22 +2558,14 @@
           const y0 = Math.min(yHead, yTail);
           const y1 = Math.max(yHead, yTail);
           const bodyH = Math.max(12, y1 - y0);
-          const bodyGrad = g.createLinearGradient(x, y0, x + w, y0);
-          bodyGrad.addColorStop(0, "rgba(238,246,255,0.04)");
-          bodyGrad.addColorStop(0.5, "rgba(196,216,236,0.2)");
-          bodyGrad.addColorStop(1, "rgba(255,236,190,0.08)");
-          g.fillStyle = bodyGrad;
-          roundRectPath(g, x + 3, y0, w - 6, bodyH, 7);
-          g.fill();
-          g.strokeStyle = "rgba(244,249,255,0.12)";
-          g.lineWidth = 1;
-          roundRectPath(g, x + 3.5, y0 + 0.5, w - 7, bodyH - 1, 6.5);
-          g.stroke();
+          g.fillStyle = "rgba(196,216,236,0.16)";
+          g.fillRect(x + 4, y0, w - 8, bodyH);
           if (!holdActive) {
-            drawLuxNote(x, yHead - 10, w, 18, color, 1.05);
+            drawLuxNote(x, yHead - 10, w, 18, color, 0.78);
           }
           // tail cap
-          drawLuxNote(x + 4, yTail - 8, w - 8, 12, "rgba(232,240,248,0.7)", 0.8);
+          g.fillStyle = "rgba(232,240,248,0.46)";
+          g.fillRect(x + 6, yTail - 5, w - 12, 7);
         } else {
           const y = judgeY - (dt / scrollTime) * (height - 40);
           drawLuxNote(x, y - 9, w, 18, color, 1);
@@ -2699,7 +2689,8 @@
       for (let lane = 0; lane < laneCount; lane += 1) {
         const ah = activeHolds[lane];
         if (!ah) continue;
-        if (!ah.lastTrail || t - ah.lastTrail > 0.065) {
+        if (particles.length > HEAVY_PARTICLE_THRESHOLD) continue;
+        if (!ah.lastTrail || t - ah.lastTrail > 0.12) {
           spawnHoldTrail(lane, t);
           ah.lastTrail = t;
         }
@@ -2713,8 +2704,8 @@
       const laneWidth = gameState.width / laneCount;
       const baseX = lane * laneWidth + laneWidth / 2;
       const baseY = gameState.judgeY - 6;
-      const budget = Math.max(4, MAX_PARTICLES - particles.length);
-      const count = Math.min(budget, perfect ? 16 : 12);
+      const budget = Math.max(3, MAX_PARTICLES - particles.length);
+      const count = Math.min(budget, perfect ? 10 : 7);
       for (let i = 0; i < count; i += 1) {
         const angle = Math.random() * Math.PI * 2;
         const speed = (Math.random() * 78 + 58) * (perfect ? 1.08 : 1);
@@ -2730,7 +2721,7 @@
           life: 0.32 + Math.random() * 0.14
         });
       }
-      if (budget > count + 2) {
+      if (budget > count + 2 && particles.length < HEAVY_PARTICLE_THRESHOLD) {
         pushParticle({
           kind: "ring",
           tint: "white",
@@ -2750,9 +2741,10 @@
       const laneWidth = gameState.width / laneCount;
       const x = lane * laneWidth + laneWidth / 2;
       const y = gameState.judgeY - 6;
-      for (let i = 0; i < 3; i += 1) {
+      if (particles.length > HEAVY_PARTICLE_THRESHOLD) return;
+      for (let i = 0; i < 1; i += 1) {
         const angle = (Math.random() - 0.5) * Math.PI;
-        const speed = 22 + Math.random() * 24;
+        const speed = 18 + Math.random() * 14;
         pushParticle({
           x: x + (Math.random() * 10 - 5),
           y: y + (Math.random() * 4 - 2),
