--- a/index.html
+++ b/index.html
@@ -763,6 +763,8 @@
     let midiSynthFilter = null;
     let midiSynthComp = null;
     let midiNoiseBuffer = null;
+    let midiVerbBuffer = null;
+    let midiVerbWet = null;
     let holdReverbBuffer = null;
     let holdSustainBus = null;
     let midiSynthNodes = [];
@@ -1160,6 +1162,14 @@
         midiSynthGain.connect(midiSynthFilter);
         midiSynthFilter.connect(midiSynthComp);
         midiSynthComp.connect(audioCtx.destination);
+        midiVerbWet = audioCtx.createGain();
+        midiVerbWet.gain.value = 0.35;
+        const midiVerb = audioCtx.createConvolver();
+        if (!midiVerbBuffer) midiVerbBuffer = buildReverbImpulse(audioCtx, 1.3, 2.8);
+        midiVerb.buffer = midiVerbBuffer;
+        midiSynthComp.connect(midiVerbWet);
+        midiVerbWet.connect(midiVerb);
+        midiVerb.connect(audioCtx.destination);
       }
       stopMidiSynth();
       const sorted = onsets.slice().sort((a, b) => a.t - b.t);
@@ -1186,25 +1196,26 @@
         const gain = audioCtx.createGain();
         const osc1 = audioCtx.createOscillator();
         const osc2 = audioCtx.createOscillator();
-        const amp = role === "bass" ? 0.12 : (role === "rhythm" ? 0.095 : 0.11);
+        const amp = role === "bass" ? 0.12 : (role === "rhythm" ? 0.095 : 0.12);
         gain.gain.setValueAtTime(0.0001, at);
-        gain.gain.exponentialRampToValueAtTime(amp * vel, at + 0.01);
+        gain.gain.linearRampToValueAtTime(amp * vel, at + 0.008);
+        gain.gain.linearRampToValueAtTime(amp * vel * 0.62, at + Math.min(dur * 0.35, 0.09));
         gain.gain.exponentialRampToValueAtTime(0.0001, at + dur);
 
         const baseFreq = role === "bass" ? freq * 0.5 : freq;
-        osc1.type = "sine";
+        osc1.type = "triangle";
         osc2.type = "sine";
         osc1.frequency.setValueAtTime(baseFreq, at);
         osc2.frequency.setValueAtTime(baseFreq * 2, at);
-        osc2.detune.setValueAtTime(6 * (Math.random() - 0.5), at);
+        osc2.detune.setValueAtTime(7 * (Math.random() - 0.5), at);
 
         osc1.connect(gain);
         osc2.connect(gain);
         gain.connect(midiSynthGain);
         osc1.start(at);
         osc2.start(at);
-        osc1.stop(at + dur + 0.01);
-        osc2.stop(at + dur + 0.01);
+        osc1.stop(at + dur + 0.02);
+        osc2.stop(at + dur + 0.02);
         midiSynthNodes.push(osc1, osc2);
       };
 
