--- a/index.html
+++ b/index.html
@@ -763,6 +763,7 @@
     let midiSynthFilter = null;
     let midiSynthComp = null;
     let midiNoiseBuffer = null;
+    let midiPianoWave = null;
     let midiVerbBuffer = null;
     let midiVerbWet = null;
     let holdReverbBuffer = null;
@@ -1140,6 +1141,18 @@
       return buffer;
     }
 
+    function getMidiPianoWave(audioCtx) {
+      if (midiPianoWave) return midiPianoWave;
+      const harmonics = [0, 1.0, 0.62, 0.36, 0.22, 0.14, 0.1, 0.075, 0.055, 0.04, 0.03];
+      const real = new Float32Array(harmonics.length);
+      const imag = new Float32Array(harmonics.length);
+      for (let i = 1; i < harmonics.length; i += 1) {
+        imag[i] = harmonics[i];
+      }
+      midiPianoWave = audioCtx.createPeriodicWave(real, imag, { disableNormalization: false });
+      return midiPianoWave;
+    }
+
     function scheduleMidiSynth(onsets, bpm) {
       if (!onsets || !onsets.length) return;
       const audioCtx = ensureAudioContext();
@@ -1148,26 +1161,35 @@
       }
       if (!midiSynthGain) {
         midiSynthGain = audioCtx.createGain();
-        midiSynthGain.gain.value = 0.56;
+        midiSynthGain.gain.value = 0.78;
         midiSynthFilter = audioCtx.createBiquadFilter();
         midiSynthFilter.type = "lowpass";
-        midiSynthFilter.frequency.value = 12000;
-        midiSynthFilter.Q.value = 0.3;
+        midiSynthFilter.frequency.value = 9800;
+        midiSynthFilter.Q.value = 0.42;
+        const midiPresence = audioCtx.createBiquadFilter();
+        midiPresence.type = "peaking";
+        midiPresence.frequency.value = 2800;
+        midiPresence.Q.value = 0.75;
+        midiPresence.gain.value = 3.8;
         midiSynthComp = audioCtx.createDynamicsCompressor();
-        midiSynthComp.threshold.value = -18;
-        midiSynthComp.knee.value = 24;
-        midiSynthComp.ratio.value = 3.2;
-        midiSynthComp.attack.value = 0.003;
-        midiSynthComp.release.value = 0.18;
+        midiSynthComp.threshold.value = -22;
+        midiSynthComp.knee.value = 26;
+        midiSynthComp.ratio.value = 2.6;
+        midiSynthComp.attack.value = 0.004;
+        midiSynthComp.release.value = 0.22;
         midiSynthGain.connect(midiSynthFilter);
-        midiSynthFilter.connect(midiSynthComp);
+        midiSynthFilter.connect(midiPresence);
+        midiPresence.connect(midiSynthComp);
         midiSynthComp.connect(audioCtx.destination);
+        const midiVerbPreDelay = audioCtx.createDelay();
+        midiVerbPreDelay.delayTime.value = 0.028;
         midiVerbWet = audioCtx.createGain();
-        midiVerbWet.gain.value = 0.35;
+        midiVerbWet.gain.value = 0.56;
         const midiVerb = audioCtx.createConvolver();
-        if (!midiVerbBuffer) midiVerbBuffer = buildReverbImpulse(audioCtx, 1.3, 2.8);
+        if (!midiVerbBuffer) midiVerbBuffer = buildReverbImpulse(audioCtx, 2.35, 3.9);
         midiVerb.buffer = midiVerbBuffer;
-        midiSynthComp.connect(midiVerbWet);
+        midiSynthComp.connect(midiVerbPreDelay);
+        midiVerbPreDelay.connect(midiVerbWet);
         midiVerbWet.connect(midiVerb);
         midiVerb.connect(audioCtx.destination);
       }
@@ -1190,33 +1212,74 @@
         const role = o.role || "melody";
         const gap = o._gap || 0.12;
         const dur = role === "bass"
-          ? Math.max(0.08, Math.min(0.26, gap * 0.95))
-          : Math.max(0.06, Math.min(0.2, gap * 0.8));
+          ? Math.max(0.2, Math.min(0.9, gap * 1.3))
+          : Math.max(0.16, Math.min(0.76, gap * 1.08));
+        const release = role === "bass" ? 0.38 : 0.3;
 
-        const gain = audioCtx.createGain();
-        const osc1 = audioCtx.createOscillator();
-        const osc2 = audioCtx.createOscillator();
-        const amp = role === "bass" ? 0.12 : (role === "rhythm" ? 0.095 : 0.12);
-        gain.gain.setValueAtTime(0.0001, at);
-        gain.gain.linearRampToValueAtTime(amp * vel, at + 0.008);
-        gain.gain.linearRampToValueAtTime(amp * vel * 0.62, at + Math.min(dur * 0.35, 0.09));
-        gain.gain.exponentialRampToValueAtTime(0.0001, at + dur);
+        const voiceGain = audioCtx.createGain();
+        const amp = role === "bass" ? 0.16 : (role === "rhythm" ? 0.128 : 0.152);
+        voiceGain.gain.setValueAtTime(0.0001, at);
+        voiceGain.gain.linearRampToValueAtTime(amp * vel, at + 0.0045);
+        voiceGain.gain.exponentialRampToValueAtTime(Math.max(0.0002, amp * vel * 0.44), at + 0.11);
+        voiceGain.gain.exponentialRampToValueAtTime(0.0001, at + dur + release);
 
         const baseFreq = role === "bass" ? freq * 0.5 : freq;
-        osc1.type = "triangle";
-        osc2.type = "sine";
-        osc1.frequency.setValueAtTime(baseFreq, at);
-        osc2.frequency.setValueAtTime(baseFreq * 2, at);
-        osc2.detune.setValueAtTime(7 * (Math.random() - 0.5), at);
+        const bodyOsc = audioCtx.createOscillator();
+        bodyOsc.setPeriodicWave(getMidiPianoWave(audioCtx));
+        bodyOsc.frequency.setValueAtTime(baseFreq, at);
 
-        osc1.connect(gain);
-        osc2.connect(gain);
-        gain.connect(midiSynthGain);
-        osc1.start(at);
-        osc2.start(at);
-        osc1.stop(at + dur + 0.02);
-        osc2.stop(at + dur + 0.02);
-        midiSynthNodes.push(osc1, osc2);
+        const shimmerOsc = audioCtx.createOscillator();
+        shimmerOsc.type = "sine";
+        shimmerOsc.frequency.setValueAtTime(baseFreq * 2.01, at);
+        shimmerOsc.detune.setValueAtTime((Math.random() * 8 - 4), at);
+        const shimmerGain = audioCtx.createGain();
+        shimmerGain.gain.setValueAtTime(role === "bass" ? 0.03 : 0.052, at);
+        shimmerGain.gain.exponentialRampToValueAtTime(0.0001, at + Math.min(0.24, dur * 0.7));
+
+        const hammer = audioCtx.createBufferSource();
+        hammer.buffer = getMidiNoiseBuffer(audioCtx);
+        const hammerBand = audioCtx.createBiquadFilter();
+        hammerBand.type = "bandpass";
+        hammerBand.frequency.value = role === "bass" ? 980 : 3100;
+        hammerBand.Q.value = 0.85;
+        const hammerGain = audioCtx.createGain();
+        hammerGain.gain.setValueAtTime(0.0001, at);
+        hammerGain.gain.linearRampToValueAtTime(0.045 * vel, at + 0.002);
+        hammerGain.gain.exponentialRampToValueAtTime(0.0001, at + 0.045);
+
+        const noteHighpass = audioCtx.createBiquadFilter();
+        noteHighpass.type = "highpass";
+        noteHighpass.frequency.value = role === "bass" ? 42 : 88;
+        const noteLowpass = audioCtx.createBiquadFilter();
+        noteLowpass.type = "lowpass";
+        noteLowpass.frequency.setValueAtTime(Math.min(10500, 1900 + baseFreq * 7.6), at);
+        noteLowpass.Q.value = 0.5;
+
+        bodyOsc.connect(voiceGain);
+        shimmerOsc.connect(shimmerGain);
+        shimmerGain.connect(voiceGain);
+        hammer.connect(hammerBand);
+        hammerBand.connect(hammerGain);
+        hammerGain.connect(voiceGain);
+        voiceGain.connect(noteHighpass);
+        noteHighpass.connect(noteLowpass);
+
+        if (typeof audioCtx.createStereoPanner === "function") {
+          const pan = audioCtx.createStereoPanner();
+          pan.pan.value = (Math.random() * 2 - 1) * 0.2;
+          noteLowpass.connect(pan);
+          pan.connect(midiSynthGain);
+        } else {
+          noteLowpass.connect(midiSynthGain);
+        }
+
+        bodyOsc.start(at);
+        shimmerOsc.start(at);
+        hammer.start(at);
+        hammer.stop(at + 0.055);
+        bodyOsc.stop(at + dur + release + 0.05);
+        shimmerOsc.stop(at + Math.min(0.28, dur + 0.14));
+        midiSynthNodes.push(bodyOsc, shimmerOsc, hammer);
       };
 
       const tick = () => {
