--- a/index.html
+++ b/index.html
@@ -382,6 +382,20 @@
       line-height: 1.6;
     }
 
+    .left .guide-card {
+      width: 100%;
+      margin-top: 16px;
+      padding: 16px;
+    }
+
+    .guide-list {
+      margin: 8px 0 0;
+      padding: 0 0 0 18px;
+      color: var(--muted);
+      font-size: 12px;
+      line-height: 1.5;
+    }
+
     .guide-actions {
       display: flex;
       gap: 8px;
@@ -557,6 +571,7 @@
           <select id="focusMode">
             <option value="auto">自动切换（每4小节）</option>
             <option value="drum">鼓优先</option>
+            <option value="bass">贝斯优先</option>
             <option value="guitar">吉他优先</option>
             <option value="piano">钢琴优先</option>
             <option value="vocal">人声优先</option>
@@ -913,6 +928,7 @@
         countdown_hint: "判定线发光时按键",
         focus_auto: "自动切换（每4小节）",
         focus_drum: "鼓优先",
+        focus_bass: "贝斯优先",
         focus_guitar: "吉他优先",
         focus_piano: "钢琴优先",
         focus_vocal: "人声优先",
@@ -1002,6 +1018,7 @@
         countdown_hint: "Hit when the line glows",
         focus_auto: "Auto (per 4 bars)",
         focus_drum: "Drum‑focused",
+        focus_bass: "Bass‑focused",
         focus_guitar: "Guitar‑focused",
         focus_piano: "Piano‑focused",
         focus_vocal: "Vocal‑focused",
@@ -1034,6 +1051,7 @@
       const focusLabels = {
         auto: t("focus_auto"),
         drum: t("focus_drum"),
+        bass: t("focus_bass"),
         guitar: t("focus_guitar"),
         piano: t("focus_piano"),
         vocal: t("focus_vocal"),
@@ -1692,6 +1710,25 @@
       const lp = offline.createBiquadFilter();
       lp.type = "lowpass";
       lp.frequency.value = 2400;
+      lp.Q.value = 0.707;
+      source.connect(hp);
+      hp.connect(lp);
+      lp.connect(offline.destination);
+      source.start(0);
+      return offline.startRendering();
+    }
+
+    async function filterBassBand(buffer) {
+      const offline = new OfflineAudioContext(1, buffer.length, buffer.sampleRate);
+      const source = offline.createBufferSource();
+      source.buffer = buffer;
+      const hp = offline.createBiquadFilter();
+      hp.type = "highpass";
+      hp.frequency.value = 40;
+      hp.Q.value = 0.707;
+      const lp = offline.createBiquadFilter();
+      lp.type = "lowpass";
+      lp.frequency.value = 260;
       lp.Q.value = 0.707;
       source.connect(hp);
       hp.connect(lp);
@@ -3364,6 +3401,7 @@
       if (preStart) {
         const remain = Math.max(0, timeToStart);
         const count = Math.ceil(remain);
+        const progress = Math.min(1, Math.max(0, 1 - remain / 3));
         g.save();
         g.fillStyle = "rgba(10, 14, 22, 0.38)";
         g.fillRect(0, 0, width, height);
@@ -3374,6 +3412,16 @@
         g.font = "18px 'Helvetica Neue', 'Arial'";
         g.fillStyle = "rgba(210,222,240,0.9)";
         g.fillText(t("countdown_hint") || "准备按判定线", width / 2, judgeY - 40);
+        const barW = Math.max(140, width * 0.36);
+        const barX = (width - barW) / 2;
+        const barY = judgeY - 22;
+        g.fillStyle = "rgba(120, 140, 168, 0.35)";
+        g.fillRect(barX, barY, barW, 6);
+        const grad = g.createLinearGradient(barX, barY, barX + barW, barY);
+        grad.addColorStop(0, "rgba(255, 238, 204, 0.9)");
+        grad.addColorStop(1, "rgba(196, 222, 250, 0.9)");
+        g.fillStyle = grad;
+        g.fillRect(barX, barY, barW * progress, 6);
         g.restore();
       }
 
@@ -3821,11 +3869,13 @@
       const modeBuffers = {};
       try {
         modeBuffers.drum = await filterDrumBand(audioBuffer);
+        modeBuffers.bass = await filterBassBand(audioBuffer);
         modeBuffers.guitar = await filterGuitarBand(audioBuffer);
         modeBuffers.piano = await filterPianoBand(audioBuffer);
         modeBuffers.vocal = await filterVocalBand(audioBuffer);
       } catch (err) {
         modeBuffers.drum = audioBuffer;
+        modeBuffers.bass = audioBuffer;
         modeBuffers.guitar = audioBuffer;
         modeBuffers.piano = audioBuffer;
         modeBuffers.vocal = audioBuffer;
@@ -3834,6 +3884,7 @@
       const sens = enhanceMode ? 1.35 : 1;
       onsetsByMode = {
         drum: analyzeOnsets(modeBuffers.drum, { sensitivity: sens }),
+        bass: analyzeOnsets(modeBuffers.bass, { sensitivity: sens }),
         guitar: analyzeOnsets(modeBuffers.guitar, { sensitivity: sens }),
         piano: analyzeOnsets(modeBuffers.piano, { sensitivity: sens }),
         vocal: analyzeOnsets(modeBuffers.vocal, { sensitivity: sens }),
@@ -3841,7 +3892,7 @@
       };
 
       baseOnsets = enhanceMode
-        ? mergeOnsetsWeighted(onsetsByMode, { drum: 1.2, bass: 1.1, guitar: 1.0, piano: 0.9, vocal: 0.8, mix: 0.9 })
+        ? mergeOnsetsWeighted(onsetsByMode, { drum: 1.15, bass: 1.2, guitar: 1.0, piano: 0.9, vocal: 0.8, mix: 0.85 })
         : onsetsByMode.mix;
       estimatedBpm = estimateBpmFromOnsets(baseOnsets);
       scrollTime = computeScrollTimeFromBpm(estimatedBpm, "audio");
@@ -3865,9 +3916,11 @@
       if (focusMode === "auto") {
         const autoModes = {
           drum: onsetsByMode.drum,
+          bass: onsetsByMode.bass,
           guitar: onsetsByMode.guitar,
           piano: onsetsByMode.piano,
-          vocal: onsetsByMode.vocal
+          vocal: onsetsByMode.vocal,
+          mix: onsetsByMode.mix
         };
         const autoSeed = hashString([
           fileName,
@@ -3968,9 +4021,11 @@
         if (focusMode === "auto") {
           const autoModes = {
             drum: onsetsByMode.drum,
+            bass: onsetsByMode.bass,
             guitar: onsetsByMode.guitar,
             piano: onsetsByMode.piano,
-            vocal: onsetsByMode.vocal
+            vocal: onsetsByMode.vocal,
+            mix: onsetsByMode.mix
           };
           const autoSeed = hashString([
             fileName,
