theme: default logo glow white except snow

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       --canvas-grad-2: rgba(14, 18, 25, 0.4);
       --key-grad-1: rgba(248, 252, 255, 0.08);
       --key-grad-2: rgba(248, 252, 255, 0.02);
-      --logo-filter: none;
+      --logo-filter: drop-shadow(0 0 32px rgba(255, 255, 255, 0.3)) drop-shadow(0 0 72px rgba(255, 255, 255, 0.14));
       --logo-opacity: 1;
       --lane-1: #3c4858;
       --lane-2: #435061;
@@ -2768,9 +2768,7 @@
           "--canvas-grad-1": "rgba(38, 52, 70, 0.6)",
           "--canvas-grad-2": "rgba(24, 36, 50, 0.54)",
           "--key-grad-1": "rgba(240, 248, 255, 0.16)",
-          "--key-grad-2": "rgba(240, 248, 255, 0.04)",
-          "--logo-filter": "drop-shadow(0 0 34px rgba(196, 220, 242, 0.32))",
-          "--logo-opacity": 1
+          "--key-grad-2": "rgba(240, 248, 255, 0.04)"
         },
         palette: [
           { hue: 202, sat: 20, light: 84 },
